{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 331,
  "lineage": "3c7aa0a1-0706-8ab0-6874-baeba61c7707",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "east-rules",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-02-13T20:51:10.144-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/cloudworkproj/global/firewalls/east-ports",
            "name": "east-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-east",
            "priority": 1000,
            "project": "cloudworkproj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/firewalls/east-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "west-rules",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-02-13T20:51:10.079-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/cloudworkproj/global/firewalls/west-ports",
            "name": "west-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-west",
            "priority": 1000,
            "project": "cloudworkproj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/firewalls/west-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_east"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webvm1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1910-eoan-v20200129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/zones/us-east1-b/disks/webvm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cloudworkproj/zones/us-east1-b/instances/webvm1",
            "instance_id": "4776189422715246536",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "sshKeys": "dan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC8lY8zMae9CFXJDS39iC6fOmOXxEXS9yKp7aGLjvq0bpGidVvlQGQncoJkdldxVZF8jY7Ok0lDHfx61otKUBcXLRZO2QE6WTTloDrW3lZLPwZ7QJ1QAC/biBvBM3QKasV0BJVTUFI5MvMiP2r5YfAd2D86xKbrt9m37OFaHs6BHXUlwQ0abUUUmsNvFw03mL6QKrzmjHXIVIJdL6iMJodiBgXJMFrhaxzPRcy88qIFvEfW4GcnSReCDm/fHqgLojbPE365jKzKmWpCUyZm8dDS9Wn3ilf5xfKf4QDuMdXKv1FEPecCqQGaacBdlVqh4uu8nJxfHK3/pr8lUPCdcdDN dbustillos@Dans-MacBook-Pro-2.local\n",
              "startup-script": "        apt-get -y update\n        apt-get -y install nginx\n        service nginx start\n        sudo apt-get install iputils-ping\n"
            },
            "metadata_fingerprint": "EdaPvHOmB74=",
            "name": "webvm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.231.39.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-east",
                "network_ip": "10.1.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/regions/us-east1/subnetworks/dev",
                "subnetwork_project": "cloudworkproj"
              }
            ],
            "project": "cloudworkproj",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/zones/us-east1-b/instances/webvm1",
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-east1-b"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_east",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cloudworkproj/global/networks/vpc-east",
            "name": "vpc-east",
            "project": "cloudworkproj",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-east"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_west",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cloudworkproj/global/networks/vpc-west",
            "name": "vpc-west",
            "project": "cloudworkproj",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-west"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-13T20:49:00.129-08:00",
            "gateway_address": "10.1.3.1",
            "id": "projects/cloudworkproj/regions/us-east1/subnetworks/dev",
            "ip_cidr_range": "10.1.3.0/24",
            "name": "dev",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-east",
            "private_ip_google_access": false,
            "project": "cloudworkproj",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/regions/us-east1/subnetworks/dev"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-13T20:49:00.136-08:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/cloudworkproj/regions/us-east1/subnetworks/prod",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "prod",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-east",
            "private_ip_google_access": false,
            "project": "cloudworkproj",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/regions/us-east1/subnetworks/prod"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "shared-services",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-13T20:49:00.158-08:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/cloudworkproj/regions/us-east1/subnetworks/shared",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "shared",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-east",
            "private_ip_google_access": false,
            "project": "cloudworkproj",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/regions/us-east1/subnetworks/shared"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "test",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-13T20:49:01.926-08:00",
            "gateway_address": "10.2.1.1",
            "id": "projects/cloudworkproj/regions/us-west1/subnetworks/test",
            "ip_cidr_range": "10.2.1.0/24",
            "name": "test",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/global/networks/vpc-west",
            "private_ip_google_access": false,
            "project": "cloudworkproj",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudworkproj/regions/us-west1/subnetworks/test"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network_west"
          ]
        }
      ]
    }
  ]
}